# oesis_runtime

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  sync-summary.json  text.md
.github/workflows/: ci.yml  sync-from-contracts.yml
oesis/: __init__.py  __main__.py
oesis/assets/examples/: README.md  consent-record.example.json  consent-store.example.json  evidence-summary.example.json  export-bundle.example.json  node-observation.example.json  node-registry.example.json  normalized-observation.example.json  (+3 more)
oesis/checks/: __init__.py  __main__.py  v01.py  v10.py
oesis/common/: __init__.py  repo_paths.py  runtime_lane.py
oesis/context/: __init__.py  loader.py
oesis/inference/: README.md  __init__.py  infer_parcel_state.py  serve_inference_api.py
oesis/ingest/: README.md  __init__.py  check_example_parity.py  extract_latest_packet.py  normalize_packet.py  normalize_public_smoke_context.py  normalize_public_weather_context.py  serve_ingest_api.py  validate_examples.py
oesis/parcel_platform/: README.md  __init__.py  format_evidence_summary.py  format_parcel_view.py  reference_pipeline.py  serve_parcel_api.py
oesis/shared_map/: README.md  __init__.py  aggregate_shared_map.py  serve_shared_map_api.py
scripts/: oesis_http_smoke_check.sh  oesis_smoke_check.sh  oesis_v02_accept.sh  oesis_v02_http_smoke_check.sh  oesis_v02_smoke_check.sh  oesis_v03_accept.sh  oesis_v03_http_smoke_check.sh  oesis_v03_smoke_check.sh  oesis_v04_accept.sh  oesis_v04_http_smoke_check.sh  oesis_v04_smoke_check.sh  oesis_v05_accept.sh  oesis_v05_http_smoke_check.sh  oesis_v05_smoke_check.sh  oesis_v10_accept.sh  oesis_v10_http_smoke_check.sh  oesis_v10_smoke_check.sh  oesis_v10_validate.sh
(+158 files in other folders)
