[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oesis-runtime"
version = "0.1.0"
description = "Reference runtime services for Open Environmental Sensing and Inference System."
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["oesis*"]

[tool.setuptools.package-data]
oesis = ["assets/examples/*.json", "assets/config/inference/*.json"]
