[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oesis-runtime"
version = "0.1.0"
description = "Reference runtime services for Open Environmental Sensing and Inference System."
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]

[project.optional-dependencies]
serial-bridge = ["pyserial>=3.5"]

[project.urls]
Homepage = "https://github.com/lumenaut-llc/oesis-runtime"
Repository = "https://github.com/lumenaut-llc/oesis-runtime"
Documentation = "https://github.com/lumenaut-llc/oesis-program-specs"

[tool.setuptools.packages.find]
include = ["oesis*"]

[tool.setuptools.package-data]
oesis = [
    "assets/v0.1/examples/*.json", "assets/v0.1/config/inference/*.json",
    "assets/v0.2/examples/*.json", "assets/v0.2/config/inference/*.json",
    "assets/v0.3/examples/*.json", "assets/v0.3/config/inference/*.json",
    "assets/v0.4/examples/*.json", "assets/v0.4/config/inference/*.json",
    "assets/v0.5/examples/*.json", "assets/v0.5/config/inference/*.json",
    "assets/v1.0/examples/*.json", "assets/v1.0/config/inference/*.json",
    "assets/v1.5/examples/*.json", "assets/v1.5/config/inference/*.json",
]
